--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>cnmetaverse域名售卖</title>
+    <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -18,6 +18,12 @@
             <div class="base"></div>
             <div class="lights"></div>
         </div>
+        <div class="contact">
+            <p>交易域名请联系：</p>
+            <p>nomok@foxmail.com</p>
         </div>
+
+
+    </div>
 </body>
 </html>
